string fields of events can be updated, but not visible to the users, and fix/ login routing

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -7,7 +7,7 @@ body {
 
 .ui.footer.container{
   //margin-right: 1em;
-  width: 50%;
+  width: 70%;
 
 }
 
